# python-sln

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
examples/01_trivial_parse/: parse.py  test.sln
src/sln/: __init__.py  json.py  parser.py
tests/test_sln/: test_parser.py
